# overture

./: Cargo.toml  README.md  run.sh
src/: listdisplay.rs  main.rs  searchbar.rs
src/core/: app.rs
src/ui/: appstate.rs  launcher.rs  listdisplay.rs  mod.rs  searchbar.rs
src/window/: bus.rs  mod.rs  os_utils.rs  window.rs
