[package]
name = "app-launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
freedesktop-desktop-entry = "0.8.0"
fuzzy-matcher = "0.3.7"
gpui = "0.2.2"
gpui-component = "0.5.0"
gpui-component-assets = "0.5.0"
nucleo = "0.5.0"
plist = "1.8.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
zbus = "5.12.0"
